# pepe-browser

./: .gitignore  CMakeLists.txt  README.md  content_webview.py  pepe_browser.py  pepe_context_menu.py  requirements.txt  win_frame.py
resources/: chrome.css  chrome.html  chrome.js  home.html  ntp.css  ntp.js
scripts/: build.ps1  download_cef.ps1
src/: pepe_app.cc  pepe_app.h  pepe_browser_win.cc  pepe_handler.cc  pepe_handler.h  pepe_window_win.cc  pepe_window_win.h
